# research_paper

./: .gitignore  README.md  pyproject.toml  ref.txt
notebooks/: Données carroyées INSEE.ipynb
src/: clean_complete_grid.py  clean_population_data.py  main.py
src/analysis/: gaussian_blurring.py
src/data/: clean_complete_grid.py  clean_population_data.py  make_dataset.py  merge_population_grid.py  retrieve_sirene_data.py
src/plots/: plot_population_map.py
