[project]
name = "research-paper-foodbiome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "shapely>=2.1.2",
]
[tool.setuptools.packages.find]
where = ["src"]