[project]
name = "research-paper-foodbiome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
[tool.setuptools.packages.find]
where = ["src"]
